Avoid UnsupportedEncodingException & use const from StandardCharsets (#1480)
Signed-off-by: Christoph Weitkamp <github@christophweitkamp.de>